# mcp-aiven

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLE_README.md  Makefile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  server.json  smithery.yaml  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deploy.yml  npm-publish.yml  publish.yml  release.yml  test.yml  version-tag.yml
.well-known/: x402.json
generator/overlays/: aiven.yaml
generator/src/: categorizer.ts  cli.ts  codegen.ts  fetch.ts  json-schema-output.ts  overlay.ts  parser.ts  schema-generator.ts
mcp_aiven/: __init__.py  credentials.py  mcp_env.py  mcp_server.py  openapi.json
python-template/: README.md
src/: client.ts  cloudflare-ips.ts  config.ts  edge-auth.ts  errors.ts  factory.ts  formatters.ts  http-tool-context.ts  inbound-client-ip.ts  inbound-request-headers.ts  inbound-tcp-client-ip.ts  index.ts  instrumentation.ts  marketplace.ts  observability.ts  prompts.ts  security.ts  tool-result-limit.ts  transport.ts  types.ts  untrusted.ts
src/instrumentation/: index.ts  sentry.ts
src/manifests/: clickhouse.yaml  core.yaml  integrations.yaml  kafka.yaml  pg.yaml
src/security/: model-armor.ts
src/sentry/: init.ts  wrap.ts
src/shared/: ai-tags.ts  service-info.ts  service-state.ts
src/tools/: api-tool.ts  connection-info.ts  json-schema-to-zod.ts  metrics-shape.ts  registry.ts  response-filter.ts  (+2 more)
tests/: README.md  test_credentials.py
(+64 files in other folders)
